[DEV] cmake cleanup and improvements, use local config for each system

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,90 +1,48 @@
 cmake_minimum_required(VERSION 3.7.2)
 
+seos_set_config_file(config.h)
+
+seos_use_libs(SEOS_LIBS)
+
 project(tests_proxy_nvm C)
 
-set(SEOS_LIBS ON
-    CACHE BOOL "string" FORCE)
-
-set(DEBUG_CONFIG_H_FILE
-        "${CMAKE_SOURCE_DIR}/projects/configs/include/Debug_Config.h"
-        CACHE STRING "" FORCE
-)
-set(MEMORY_CONFIG_H_FILE
-        "${CMAKE_SOURCE_DIR}/projects/configs/include/Memory_Config.h"
-        CACHE STRING "" FORCE
-)
-set(LOGS_CONFIG_H_FILE
-        "${CMAKE_SOURCE_DIR}/projects/configs/include/Logs_Config.h"
-        CACHE STRING "" FORCE
-)
-
-# Include cmake helper functions
-include(cmake/helpers.cmake)
-
-set(ENABLE_LINT ON
-    CACHE BOOL "string")
-
-ImportCamkes()
-
-#-------------------------------------------------------------------------------
-# Component ProxyNVM_Tester1
-#-------------------------------------------------------------------------------
-if (ENABLE_LINT)
-    set(CMAKE_C_CPPCHECK "cppcheck;--enable=warning;--inline-suppr")
-    set(CMAKE_C_CLANG_TIDY "clang-tidy;-checks=*")
-endif()
 DeclareCAmkESComponent(ProxyNVM_Tester1
     INCLUDES
-		"components/ChanMux/src/instance"
+		components/ChanMux/src/instance
     SOURCES
-        "src/ProxyNVM_Tester1.c"
-        "src/ProxyNVM_common.c"
+        src/ProxyNVM_Tester1.c
+        src/ProxyNVM_common.c
+    C_FLAGS
+        -Wall -Werror
     LIBS
         seos_libs
 )
 
-#-------------------------------------------------------------------------------
-# Component ProxyNVM_Tester2
-#-------------------------------------------------------------------------------
-if (ENABLE_LINT)
-    set(CMAKE_C_CPPCHECK "cppcheck;--enable=warning;--inline-suppr")
-    set(CMAKE_C_CLANG_TIDY "clang-tidy;-checks=*")
-endif()
 DeclareCAmkESComponent(ProxyNVM_Tester2
     INCLUDES
-        "components/ChanMux/src/instance"
+        components/ChanMux/src/instance
     SOURCES
-        "src/ProxyNVM_Tester2.c"
-        "src/ProxyNVM_common.c"
+        src/ProxyNVM_Tester2.c
+        src/ProxyNVM_common.c
+    C_FLAGS
+        -Wall -Werror
     LIBS
         seos_libs
 )
-
-#-------------------------------------------------------------------------------
-# Component UartDrv
-#-------------------------------------------------------------------------------
 
 DeclareCAmkESComponent(UartDrv
     SOURCES
-        "components/Uart/src/UartDrv.c"
-        "components/Uart/src/qemu_uart.c"
+        components/Uart/src/UartDrv.c
+        components/Uart/src/qemu_uart.c
     C_FLAGS
         -Wall -Werror
 )
 
-#-------------------------------------------------------------------------------
-# Component ChanMux
-#-------------------------------------------------------------------------------
-
 DeclareCAmkESComponent(ChanMux
-    INCLUDES
-        "../configs/include"
     SOURCES
-        "components/ChanMux/src/instance/ChanMux_Instance.c"
+        components/ChanMux/src/instance/ChanMux_Instance.c
     C_FLAGS
         -Wall -Werror
-        -DMEMORY_CONFIG_H_FILE=${MEMORY_CONFIG_H_FILE}
-        -DDEBUG_CONFIG_H_FILE=${DEBUG_CONFIG_H_FILE}
     LIBS
         seos_libs
 )
@@ -92,16 +50,4 @@ DeclareCAmkESComponent(ChanMux
 #ROOT SERVER
 DeclareCAmkESRootserver(main.camkes)
 GenerateCAmkESRootServer()
-
-set(IMAGE_NAME capdl-loader-image-arm-${KernelARMPlatform})
-add_custom_command(
-      TARGET rootserver_image
-      POST_BUILD
-      COMMAND ${CROSS_COMPILER_PREFIX}size ${IMAGE_NAME}  | tee ${IMAGE_NAME}.size
-      COMMAND ${CROSS_COMPILER_PREFIX}objdump -dht ${IMAGE_NAME} > ${IMAGE_NAME}.lst
-      COMMAND ${CROSS_COMPILER_PREFIX}objdump -dghlsStx ${IMAGE_NAME} > ${IMAGE_NAME}.dump
-      WORKING_DIRECTORY "../../images"
-      VERBATIM
-)
-
 GenerateSimulateScript()
