[DEV] use error code header file from seos_core_api

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,6 +15,7 @@ DeclareCAmkESComponent(ProxyNVM_Tester1
     C_FLAGS
         -Wall -Werror
     LIBS
+        seos_core_api
         seos_libs
 )
 
@@ -27,6 +28,7 @@ DeclareCAmkESComponent(ProxyNVM_Tester2
     C_FLAGS
         -Wall -Werror
     LIBS
+        seos_core_api
         seos_libs
 )
 
@@ -44,6 +46,7 @@ DeclareCAmkESComponent(ChanMux
     C_FLAGS
         -Wall -Werror
     LIBS
+        seos_core_api
         seos_libs
 )
 
