[DEV] SEOS-1149 use UART driver component

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -41,12 +41,8 @@ DeclareCAmkESComponent(ProxyNVM_Tester2
         proxy_nvm
 )
 
-DeclareCAmkESComponent(UartDrv
-    SOURCES
-        components/Uart/src/UartDrv.c
-        components/Uart/src/qemu_uart.c
-    C_FLAGS
-        -Wall -Werror
+DeclareCAmkESComponent_UART(
+    UART
 )
 
 DeclareCAmkESComponent_ChanMux(
