--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,8 +3,8 @@ cmake_minimum_required(VERSION 3.7.2)
 seos_set_config_file(system_config.h)
 
 seos_use_libs(
-    SEOS_LIBS
-    SEOS_CHANMUX
+    OS_LIBS
+    OS_CHANMUX
 )
 
 
