--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,8 @@
 cmake_minimum_required(VERSION 3.7.2)
 
-seos_set_config_file(system_config.h)
+os_set_config_file(system_config.h)
 
-seos_use_libs(
+os_use_libs(
     OS_LIBS
     OS_CHANMUX
 )
