[DOC] add info header

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,3 +1,9 @@
+#
+# Test ChanMux/Proxy NVM
+#
+# Copyright (C) 2020, Hensoldt Cyber GmbH
+#
+
 cmake_minimum_required(VERSION 3.7.2)
 
 os_set_config_file(system_config.h)
