--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,8 +34,8 @@ DeclareCAmkESComponent(
         proxy_nvm
 )
 
-DeclareCAmkESComponents_ChanMux_UART(
-    ChanMux
+ChanMux_UART_DeclareCAmkESComponents(
+    ChanMux_UART
     components/ChanMux/ChanMux_config.c
     system_config
 )
