[DEV] chanmux_client is something proxy_nvm needs internally

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,6 +33,7 @@ DeclareCAmkESComponent(
         lib_debug
         lib_macros
         proxy_nvm
+        chanmux_client
 )
 
 ChanMux_UART_DeclareCAmkESComponents(
